--- a/index.html
+++ b/index.html
@@ -11,6 +11,24 @@
         <h1>Platos de comida</h1>
         <hr>
 
+
+        <section class="formulario">
+            <h4>Ingresa una nueva comida</h4>
+            <div class="form">
+                <input type="text" id="nombreComida" placeholder="Nombre del plato">
+                <input type="text" id="departamentoComida" placeholder="Ingresa el departamento de origen">
+                <input type="text" id="calificacionComida" placeholder="Ingresa la calificacion">
+                <select id="isFavorita">
+                    <option value="0">Escoge la opción: ¿Es tu comida favorita?</option>
+                    <option value="SI">Si</option>
+                    <option value="NO">No</option>
+                </select>
+                <button class="btn" id="sendComida">Enviar datos</button>
+            </div>
+        </section>
+
+
+
         <section>
             <div class="platos" id="platoscomida"></div>
 
